--- a/styles.css
+++ b/styles.css
@@ -118,3 +118,64 @@ h1 {
 .toggle-checkbox:checked + .toggle-label::before {
     transform: translateX(30px);
 }
+
+/* For tablets and smaller screens siz adjustments */
+@media (max-width: 1024px) {
+    .container {
+        padding: 10px;
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+
+    .search {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    input[type="text"] {
+        width: 100%;
+        max-width: 300px;
+    }
+
+    .toggle-switch {
+        margin: 10px 0;
+    }
+
+    button {
+        width: 100%;
+        max-width: 300px;
+    }
+
+    .weather-card {
+        margin: 10px;
+        padding: 10px;
+    }
+
+    .toggle-label {
+        margin-left: 5px;
+    }
+}
+
+/* For for mobile phones screen sizes*/
+@media (max-width: 768px) {
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    input[type="text"] {
+        font-size: 0.9rem;
+        padding: 8px;
+    }
+
+    button {
+        padding: 8px 16px;
+        font-size: 0.9rem;
+    }
+
+    .toggle-label {
+        font-size: 0.8rem;
+    }
+}
